Remove explicit auth header requirements
